<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <!-- 
   
   	android:stretchColumns="1" —The second column (because the column numbers are 0-based) is stretched to take up any available space in the row.
	android:stretchColumns="0,1" —Both the first and second columns are stretched to take up the available space in the row.
	android:stretchColumns="*" —All columns are stretched to take up the available space.
    -->
    
    <TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="#015488"
		android:stretchColumns="0,1,2">
		
			 
	    <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/nova_viagem"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textStyle="bold" />		
        
        
		<TableRow>
	    
	    	<TextView android:text="@string/destino" />
			<EditText android:id="@+id/destino" android:inputType="text" />
		
	    
		</TableRow>
		
		<TableRow>
		    
		    <TextView android:text="@string/tipo_da_viagem" />
			<RadioGroup android:id="@+id/tipoViagem" android:orientation="horizontal" >
				<RadioButton android:id="@+id/lazer" android:checked="true" android:text="@string/lazer" />
				<RadioButton android:id="@+id/negocios" android:layout_marginLeft="30dp" android:text="@string/negocios" />
			</RadioGroup>
		    
		</TableRow>
		
		<!-- Campo de datas -->
		<TableRow>
			<TextView android:layout_gravity="center" android:text="@string/data_da_chegada" />
			<TextView android:layout_gravity="center" android:text="@string/data_da_saida" />
		</TableRow>
		<TableRow>
			<Button android:id="@+id/dataChegada" 
			    	android:onClick="selecionarData" 
			    	android:text="@string/selecione" 
			    	android:layout_width="match_parent"
					android:layout_height="wrap_content"
					 />
			
			<Button android:id="@+id/dataSaida" 
			    	android:onClick="selecionarData" 
			    	android:text="@string/selecione" 
			    	android:layout_width="match_parent"
					android:layout_height="wrap_content"
					 />
		</TableRow>

		<TextView android:text="@string/orcamento" />
		<EditText android:id="@+id/orcamento" android:inputType="numberDecimal" /> 

		
		<TableRow>
			<TextView android:layout_width="wrap_content" android:text="@string/quantidade_de_pessoas" />
			<EditText android:id="@+id/quantidadePessoas" android:inputType="number" />
		</TableRow>
  		
		
		<TableRow>
		
		  <Button android:id="@+id/botaoVoltarTipoViagem" 
		     	 android:layout_width="match_parent" 
		     	 android:layout_height="match_parent"
		     	 android:text="@string/voltar"
	        	 android:onClick="voltarTipoViagem"
	        	 />
		  
		  <Button android:onClick="salvarViagem"
				  android:text="@string/criarViagem"
				   />
		  
		</TableRow>		
	</TableLayout>
	
    
   
</ScrollView>
