<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical" >
    
    <!-- Texto principal no menu -->
    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/app_name"
		android:textAppearance="?android:attr/textAppearanceLarge" />
	
    <!-- Container do dash board (aonde vao ficar as opções) -->
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#015488">
		
	    <!-- Primeira linha -->
	    <TextView
			android:id="@+id/novo_gasto"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	    	android:paddingLeft="35dp"
			android:paddingStart="25dp"
			android:paddingRight="0dp"
			android:paddingEnd="0dp"
			android:clickable="true"
			android:drawableTop="@drawable/ic_launcher"
			android:onClick="selecionarOpcao"
			android:text="@string/novo_gasto"
			android:textColor="#FFFFFF"
			android:textStyle="bold" />
	    
	    <TextView
			android:id="@+id/nova_viagem"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_alignTop="@id/novo_gasto"
			android:paddingLeft="25dp"
			android:paddingStart="25dp"
			android:paddingRight="8dp"
			android:paddingEnd="0dp"
			android:clickable="true"
			android:drawableTop="@drawable/ic_launcher"
			android:onClick="selecionarOpcao"
			android:text="@string/nova_viagem"
			android:textColor="#FFFFFF"
			android:textStyle="bold" />
	    
	    <!-- Segunda linha -->
		<TextView
			android:id="@+id/minhas_viagens"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@id/novo_gasto"
			android:layout_alignParentBottom="true"
			android:paddingLeft="25dp"
			android:paddingStart="25dp"
			android:paddingRight="0dp"
			android:paddingEnd="0dp"
			android:clickable="true"
			android:drawableTop="@drawable/ic_launcher"
			android:onClick="selecionarOpcao"
			android:text="@string/minhas_viagens"
			android:textColor="#FFFFFF"
			android:textStyle="bold" />
	    
		<TextView
			android:id="@+id/configuracoes"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@id/minhas_viagens"
			android:layout_alignRight="@id/nova_viagem"
			android:clickable="true"
			android:drawableTop="@drawable/ic_launcher"
			android:onClick="selecionarOpcao"
			android:text="@string/configuracoes"
			android:textColor="#FFFFFF"
			android:textStyle="bold" />
	    
	 </RelativeLayout>   
    

</LinearLayout>
